force-app/main/default/objects/Hazard_Media__c/Hazard_Media__c.object-meta.xml
<CustomObject>
    <description>Child of Hazard Signal. Holds many media items (satellite images, hazard maps, redirect URLs) per signal.</description>
    <label>Hazard Media</label>
    <nameField>
        <displayFormat>HM-{00000}</displayFormat>
        <label>Hazard Media Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hazard Media</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>