force-app/main/default/objects/Hazard_Media__c/fields/Hazard_Signal__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Signal__c</fullName>
    <label>Hazard Signal</label>
    <referenceTo>Hazard_Signal__c</referenceTo>
    <relationshipLabel>Hazard Media</relationshipLabel>
    <relationshipName>Hazard_Media</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>