force-app/main/default/objects/Hazard_Media__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Satellite</fullName>
            </value>
            <value>
                <fullName>Map</fullName>
            </value>
            <value>
                <fullName>Footprint</fullName>
            </value>
            <value>
                <fullName>Redirect</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>