force-app/main/default/objects/Hazard_Media__c/fields/Media_URL__c.field-meta.xml
<CustomField>
    <fullName>Media_URL__c</fullName>
    <description>Image, map or redirect URL from the source API.</description>
    <label>Media URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>