force-app/main/default/objects/Hazard_Media__c/fields/Source_Ref_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Ref_Id__c</fullName>
    <description>Unique key per media item for idempotent upsert.</description>
    <externalId>true</externalId>
    <label>Source Ref Id</label>
    <length>180</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>